# fastapi-postgres-alembic-boilerplate

./: README.md  docker-compose.yml
api/: Dockerfile  main.py  models.py  pyproject.toml  schemas.py
api/alembic/: env.py
api/alembic/versions/: 01d4a0b5b907_.py
